# AIS

lab1/: family.pl  test.pl
lab2/: pyproject.toml
lab2/src/: main.py
lab2/src/methods/: find_characters_by_faction.py  find_items_by_location.py  find_quests_by_giver.py  find_weapons_by_damage.py  get_companions.py  get_quest_giver.py
lab2/src/prolog/: fallout_nw.pl
lab3/: analysis.ipynb  lab-4.ipynb  pyproject.toml
lab4/: main.ipynb  pyproject.toml
lab5/: main.ipynb  pyproject.toml
lab6/: NOTES.md  main.ipynb  pyproject.toml
